Login page responsive

--- a/WEB/login.html
+++ b/WEB/login.html
@@ -6,21 +6,23 @@
     <title>Atmos</title>
 </head>
 <body>
-    <form action="" method="post">
-        <div class="imgcontainer">
-            <img alt="Logo" class="logo" src="atmos_logo.png">
-        </div>
+    <div class="login_form">
+        <form action="" method="post">
+            <div class="imgcontainer">
+                <img alt="Logo" class="logo" src="atmos_logo.png">
+            </div>
 
-        <div class="container">
-            <label for="uname"><b>Username</b></label>
-            <input id="uname" type="text" placeholder="Enter Username" required>
+            <div class="container">
+                <label for="uname"><b>Username</b></label>
+                <input id="uname" type="text" placeholder="Enter Username" required>
 
-            <label for="psw"><b>Password</b></label>
-            <input id="psw" type="password" placeholder="Enter Password" required>
+                <label for="psw"><b>Password</b></label>
+                <input id="psw" type="password" placeholder="Enter Password" required>
 
-            <button type="submit">Login</button>
-        </div>
-    </form>
+                <button type="submit">Login</button>
+            </div>
+        </form>
+    </div>
 
 </body>
 </html>
